adds mod_uwsgi module

--- a/pillar.example
+++ b/pillar.example
@@ -22,6 +22,7 @@ apache:
 
     # ``apache.mod_wsgi`` formula additional configuration:
     mod_wsgi: mod_wsgi
+    mod_uwsgi: mod_uwsgi
 
     # Default value for AddDefaultCharset in RedHat configuration
     default_charset: 'UTF-8'
